fixed modal size and hid the scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,12 @@
 @import "tw-animate-css";
 @import "tailwindcss";
 
-
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
